Fix mobile alignment: left-align 'We Come to You', 'Quality Service', and 'Family Friendly' sections on mobile devices

--- a/themes/hairathome/assets/css/main.css
+++ b/themes/hairathome/assets/css/main.css
@@ -440,12 +440,23 @@
 }
 
 /* Better mobile text alignment */
-.text-center-mobile {
-    text-align: center;
+.text-left-mobile {
+    text-align: left;
 }
 
 @media (min-width: 1024px) {
-    .text-center-mobile {
+    .text-left-mobile {
         text-align: left;
+    }
+}
+
+/* Fix for about section mobile alignment */
+.justify-start-mobile {
+    justify-content: flex-start;
+}
+
+@media (min-width: 1024px) {
+    .justify-start-mobile {
+        justify-content: center;
     }
 }
